# multitenance-tutorial

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_VERIFICATION.md  QUICK_START.md  README.md  TUTORIAL_COMPLETION_SUMMARY.md  VALIDATION_REPORT.md
.claude/: settings.local.json
step01-vcpkg-setup/: CMakeLists.txt  CMakePresets.json  README.md  bootstrap.sh  vcpkg.json
step01-vcpkg-setup/src/: main.cpp
step02-sqlite-foundation/: CMakeLists.txt  README.md  vcpkg.json
step02-sqlite-foundation/include/db/: database.hpp  exceptions.hpp  statement.hpp  transaction.hpp
step02-sqlite-foundation/src/: database.cpp  main.cpp  statement.cpp
step02-sqlite-foundation/tests/: database_test.cpp
step03-connection-pool/: CMakeLists.txt  README.md  vcpkg.json
step03-connection-pool/include/pool/: connection_pool.hpp  pool_config.hpp  pooled_connection.hpp
step03-connection-pool/src/: connection_pool.cpp  main.cpp
step03-connection-pool/tests/: pool_test.cpp
step04-repository-pattern/: CMakeLists.txt  README.md  vcpkg.json
step04-repository-pattern/include/repository/: entity.hpp  repository.hpp  specification.hpp  user_repository.hpp
step04-repository-pattern/src/: main.cpp
step04-repository-pattern/tests/: repository_test.cpp
step05-tenant-management/: CMakeLists.txt  README.md  vcpkg.json
step05-tenant-management/include/tenant/: tenant_context.hpp  tenant_manager.hpp
step05-tenant-management/src/: main.cpp  tenant_context.cpp  tenant_manager.cpp
step06-grpc-basics/: CMakeLists.txt  README.md  system.db-shm  system.db-wal  vcpkg.json
step06-grpc-basics/proto/: user.proto
step06-grpc-basics/src/: client.cpp  main.cpp  server.cpp
step06-grpc-basics/tests/: grpc_test.cpp
step07-grpc-services/: CMakeLists.txt  README.md  vcpkg.json
step07-grpc-services/include/services/: dto.hpp  tenant_service.hpp
step07-grpc-services/proto/: tenant.proto
step07-grpc-services/src/: main.cpp
step07-grpc-services/src/services/: mapper.cpp  user_service.cpp
step07-grpc-services/tests/: grpc_service_test.cpp
step08-grpc-interceptors/: CMakeLists.txt  README.md
step08-grpc-interceptors/include/interceptors/: auth_interceptor.hpp  base_interceptor.hpp
step08-grpc-interceptors/include/services/: exceptions.hpp  user_service.hpp
step08-grpc-interceptors/proto/: user.proto
step08-grpc-interceptors/src/: main.cpp
step08-grpc-interceptors/src/interceptors/: tenant_interceptor.cpp
step08-grpc-interceptors/src/services/: tenant_service.cpp
step09-authorization/: CMakeLists.txt  README.md  vcpkg.json
step09-authorization/include/auth/: authorization_service.hpp
step09-authorization/include/db/: database.hpp  transaction.hpp
step09-authorization/include/handlers/: auth_handler.hpp
step09-authorization/include/interceptors/: auth_interceptor.hpp  interceptor_factory.hpp  logging_interceptor.hpp  tenant_interceptor.hpp
step09-authorization/include/services/: auth_service.hpp  mapper.hpp
step09-authorization/proto/: common.proto
step09-authorization/src/: main.cpp
step09-authorization/src/auth/: jwt_validator.cpp  role_repository.cpp
step09-authorization/src/db/: statement.cpp
step09-authorization/src/handlers/: auth_handler.cpp  tenant_handler.cpp
step09-authorization/src/interceptors/: auth_interceptor.cpp  interceptor_factory.cpp
step09-authorization/src/services/: auth_service.cpp
step09-authorization/tests/: grpc_interceptor_test.cpp
step10-complete-system/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vcpkg.json
step10-complete-system/config/: README.md  config.json  config.production.json  config.test.json
step10-complete-system/include/auth/: jwt_validator.hpp  policy_engine.hpp  role_repository.hpp
step10-complete-system/include/config/: server_config.hpp
step10-complete-system/include/db/: exceptions.hpp  schema_initializer.hpp  statement.hpp
step10-complete-system/include/handlers/: health_handler.hpp
step10-complete-system/include/interceptors/: auth_interceptor.hpp  interceptor_factory.hpp
step10-complete-system/include/repository/: tenant_repository.hpp  user_repository.hpp
step10-complete-system/include/services/: dto.hpp  health_service.hpp  tenant_service.hpp  user_service.hpp
step10-complete-system/proto/: health.proto
step10-complete-system/scripts/: init-db.sh
step10-complete-system/src/: main.cpp
step10-complete-system/src/auth/: authorization_service.cpp  jwt_validator.cpp  policy_engine.cpp
step10-complete-system/src/config/: server_config.cpp
step10-complete-system/src/db/: database.cpp  schema_initializer.cpp
step10-complete-system/src/handlers/: health_handler.cpp  user_handler.cpp
step10-complete-system/src/interceptors/: auth_interceptor.cpp  base_interceptor.cpp  interceptor_factory.cpp  logging_interceptor.cpp
step10-complete-system/src/repository/: tenant_repository.cpp  user_repository.cpp
step10-complete-system/src/services/: health_service.cpp  mapper.cpp  tenant_service.cpp  user_service.cpp
step10-complete-system/tests/: repository_test.cpp
